- reworked discount price calc function - fixed header visibility category menu styles - fixed product card

--- a/src/components/ui/product-card/ProductCard.module.scss
+++ b/src/components/ui/product-card/ProductCard.module.scss
@@ -52,6 +52,10 @@
   width: 100%;
 }
 
+.priceCnt > :only-child {
+  margin-left: auto;
+}
+
 .discount {
   color: var(--black-05);
   font-size: 16px;
